# tauri-demo

./: index.html  package-lock.json  package.json
.github/workflows/: release.yml
public/: city.json  win.json
src/: App.vue  main.js  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: Greet.vue
src/components/Header/: index.vue
~/.tauri/: myapp.key  myapp.key.pub
